--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/maliput_integration
-	previous = 
-	base = 48ad0ac
+	previous = 48ad0ac
+	base = 4d98645
 	trim = 
 	trimbase = 
