--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/maliput_integration
-	previous = 
-	base = 659998c
+	previous = 659998c
+	base = d40324b
 	trim = 
 	trimbase = 
