Imported upstream version '0.1.4' of 'upstream'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ find_package(maliput_dragway REQUIRED)
 find_package(maliput_malidrive REQUIRED)
 find_package(maliput_multilane REQUIRED)
 find_package(maliput_object REQUIRED)
+find_package(maliput_sparse REQUIRED)
+find_package(maliput_osm REQUIRED)
 find_package(maliput_py REQUIRED)
 find_package(yaml-cpp REQUIRED)
 
