--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>maliput_integration</name>
-  <version>0.1.3</version>
+  <version>0.1.4</version>
   <description>Maliput Integration.</description>
   <maintainer email="daniel.stonier@tri.global">Daniel Stonier</maintainer>
   <license file="LICENSE">BSD 3-Clause</license>
@@ -17,7 +17,9 @@
   <depend>maliput_malidrive</depend>
   <depend>maliput_multilane</depend>
   <depend>maliput_object</depend>
+  <depend>maliput_osm</depend>
   <depend>maliput_py</depend>
+  <depend>maliput_sparse</depend>
   <depend>yaml-cpp</depend>
 
   <test_depend>ament_cmake_clang_format</test_depend>
